--- a/game-patching/zipatch/index.html
+++ b/game-patching/zipatch/index.html
@@ -119,6 +119,16 @@ SAN (Static Actors)
 <input type=checkbox class=hidden>
 <label>
 <span class=flex>
+<a href=/game-patching/patching/ class=gdoc-nav__entry>
+Client Patching
+</a>
+</span>
+</label>
+</li>
+<li>
+<input type=checkbox class=hidden>
+<label>
+<span class=flex>
 <a href=/game-patching/zipatch/ class="gdoc-nav__entry is-active">
 ZiPatch Format
 </a>
