deploy: fa86cd0648d5afc9e0e36ac59d0cdfe30932272a

--- a/game-files/scripts/lpd/index.html
+++ b/game-files/scripts/lpd/index.html
@@ -223,7 +223,7 @@ Script section
 </h3>
 </div>
 <p>The script is an &ldquo;encrypted&rdquo; form of the lua byte-code. The script can be decrypted using the following algorithm:</p>
-<div class=highlight><pre tabindex=0 class=chroma><code class=language-cpp data-lang=cpp>  <span class=kt>char</span> <span class=n>decoded</span> <span class=o>=</span> <span class=n>encoded</span> <span class=o>^</span> <span class=mo>073</span>
+<div class=highlight><pre tabindex=0 class=chroma><code class=language-cpp data-lang=cpp>  <span class=kt>char</span> <span class=n>decoded</span> <span class=o>=</span> <span class=n>encoded</span> <span class=o>^</span> <span class=mh>0x73</span>
 </code></pre></div><div class=gdoc-page__anchorwrap>
 <h2 id=file-name-format>
 File Name Format
