deploy: dafb7f83ac7064d164f1519a9c06ba87d031ce59

--- a/game-files/executables/ffxivboot/index.html
+++ b/game-files/executables/ffxivboot/index.html
@@ -80,6 +80,12 @@ if there are any updates, then the server will respond with the needed torrents 
 </label>
 <ul class=gdoc-nav__list>
 <li>
+<input type=checkbox class=gdoc-nav__toggle id=navtree-69a584fd checked>
+<label for=navtree-69a584fd class="flex justify-between">
+<span class=flex>Executables</span><svg class="icon gdoc_keyborad_arrow_left"><use xlink:href="#gdoc_keyborad_arrow_left"/></svg><svg class="icon gdoc_keyborad_arrow_down"><use xlink:href="#gdoc_keyborad_arrow_down"/></svg>
+</label>
+<ul class=gdoc-nav__list>
+<li>
 <input type=checkbox class=hidden>
 <label>
 <span class=flex>
@@ -108,6 +114,8 @@ Login
 </a>
 </span>
 </label>
+</li>
+</ul>
 </li>
 <li>
 <input type=checkbox class=gdoc-nav__toggle id=navtree-739ea3a3>
@@ -179,7 +187,7 @@ justify-between
 hidden-mobile" itemprop=breadcrumb>
 <div><svg class="icon gdoc_path hidden-mobile"><use xlink:href="#gdoc_path"/></svg>
 <ol class=breadcrumb itemscope itemtype=https://schema.org/BreadcrumbList>
-<li itemprop=itemListElement itemscope itemtype=https://schema.org/ListItem><a itemscope itemtype=https://schema.org/WebPage itemprop=item itemid=/ href=/><span itemprop=name>Index</span></a><meta itemprop=position content="2"></li><li> / </li><li itemprop=itemListElement itemscope itemtype=https://schema.org/ListItem><a itemscope itemtype=https://schema.org/WebPage itemprop=item itemid=/game-files/ href=/game-files/><span itemprop=name>Game Files</span></a><meta itemprop=position content="3"></li><li> / </li><li itemprop=itemListElement itemscope itemtype=https://schema.org/ListItem><span itemprop=name>Boot</span><meta itemprop=position content="4"></li>
+<li itemprop=itemListElement itemscope itemtype=https://schema.org/ListItem><a itemscope itemtype=https://schema.org/WebPage itemprop=item itemid=/ href=/><span itemprop=name>Index</span></a><meta itemprop=position content="1"></li><li> / </li><li itemprop=itemListElement itemscope itemtype=https://schema.org/ListItem><a itemscope itemtype=https://schema.org/WebPage itemprop=item itemid=/game-files/ href=/game-files/><span itemprop=name>Game Files</span></a><meta itemprop=position content="2"></li><li> / </li><li itemprop=itemListElement itemscope itemtype=https://schema.org/ListItem><a itemscope itemtype=https://schema.org/WebPage itemprop=item itemid=/game-files/executables/ href=/game-files/executables/><span itemprop=name>Executables</span></a><meta itemprop=position content="3"></li><li> / </li><li itemprop=itemListElement itemscope itemtype=https://schema.org/ListItem><span itemprop=name>Boot</span><meta itemprop=position content="4"></li>
 </ol>
 </div>
 </div>
