--- a/game-files/scripts/lpd/index.html
+++ b/game-files/scripts/lpd/index.html
@@ -71,6 +71,12 @@ LPD (Lua Program Data) |Project Novum
 </label>
 <ul class=gdoc-nav__list>
 <li>
+<input type=checkbox class=gdoc-nav__toggle id=navtree-69a584fd>
+<label for=navtree-69a584fd class="flex justify-between">
+<span class=flex>Executables</span><svg class="icon gdoc_keyborad_arrow_left"><use xlink:href="#gdoc_keyborad_arrow_left"/></svg><svg class="icon gdoc_keyborad_arrow_down"><use xlink:href="#gdoc_keyborad_arrow_down"/></svg>
+</label>
+<ul class=gdoc-nav__list>
+<li>
 <input type=checkbox class=hidden>
 <label>
 <span class=flex>
@@ -99,6 +105,8 @@ Login
 </a>
 </span>
 </label>
+</li>
+</ul>
 </li>
 <li>
 <input type=checkbox class=gdoc-nav__toggle id=navtree-739ea3a3 checked>
