deploy: c9f144f43abbef63945cc9c1ce3e1e8fd346d8b9

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=color-scheme content="light dark">
-<meta name=description content="Why does Project Novum exist?     The simplest reason I can give to why this exist is to research how the old FFXIV 1.0 - 1.23b game client worked. The lack of actual documentation on the game client is very minimal, and the documentation that does exist is very poorly written.
-Why do you say other peoples documentation is poorly written?     For the simple fact they have just not wrote down any of there actual research.">
+<meta name=description content="Why does Project Novum exist?     To Document how the FFXIV 1.0 - 1.23b game client worked.
+Other FFXIV 1.0 Resources     Project Meteor : http://ffxivclassic.fragmenterworks.com/wiki/index.php/Main_PageSeventh Umbral Launhcer : http://seventhumbral.">
 <title>
 Project Novum
 </title>
@@ -193,25 +193,16 @@ Why does Project Novum exist?
 </a>
 </h2>
 </div>
-<p>The simplest reason I can give to why this exist is to research how the old FFXIV 1.0 - 1.23b game client worked. The lack of actual documentation on the game client is very minimal, and the documentation that does exist is very poorly written.</p>
+<p>To Document how the FFXIV 1.0 - 1.23b game client worked.</p>
 <div class=gdoc-page__anchorwrap>
-<h2 id=why-do-you-say-other-peoples-documentation-is-poorly-written>
-Why do you say other peoples documentation is poorly written?
-<a data-clipboard-text=https://project-novum.github.io/#why-do-you-say-other-peoples-documentation-is-poorly-written class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor Why do you say other peoples documentation is poorly written?" href=#why-do-you-say-other-peoples-documentation-is-poorly-written><svg class="icon gdoc_link"><use xlink:href="#gdoc_link"/></svg>
+<h2 id=other-ffxiv-10-resources>
+Other FFXIV 1.0 Resources
+<a data-clipboard-text=https://project-novum.github.io/#other-ffxiv-10-resources class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor Other FFXIV 1.0 Resources" href=#other-ffxiv-10-resources><svg class="icon gdoc_link"><use xlink:href="#gdoc_link"/></svg>
 </a>
 </h2>
 </div>
-<p>For the simple fact they have just not wrote down any of there actual research.</p>
-<div class=gdoc-page__anchorwrap>
-<h2 id=on-that-note-i-leave-you-with-one-of-my-favorite-pieces-of-music>
-On that note, I leave you with one of my favorite pieces of music:
-<a data-clipboard-text=https://project-novum.github.io/#on-that-note-i-leave-you-with-one-of-my-favorite-pieces-of-music class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor On that note, I leave you with one of my favorite pieces of music:" href=#on-that-note-i-leave-you-with-one-of-my-favorite-pieces-of-music><svg class="icon gdoc_link"><use xlink:href="#gdoc_link"/></svg>
-</a>
-</h2>
-</div>
-<div style=position:relative;padding-bottom:56.25%;height:0;overflow:hidden>
-<iframe src=https://www.youtube.com/embed/-sNWKbnaFkg style=position:absolute;top:0;left:0;width:100%;height:100%;border:0 allowfullscreen title="YouTube Video"></iframe>
-</div>
+<p>Project Meteor : <a class=gdoc-markdown__link href=http://ffxivclassic.fragmenterworks.com/wiki/index.php/Main_Page>http://ffxivclassic.fragmenterworks.com/wiki/index.php/Main_Page</a>
+Seventh Umbral Launhcer : <a class=gdoc-markdown__link href=http://seventhumbral.org/downloads.php>http://seventhumbral.org/downloads.php</a></p>
 </article>
 <div class="gdoc-page__footer flex flex-wrap justify-between">
 </div>
