deploy: 99fc53d7c36f2ebe8c5348ddc5b80ffb523a6613

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Other FFXIV 1.0 Resources
 </a>
 </h2>
 </div>
-<p>Project Meteor : <a class=gdoc-markdown__link href=http://ffxivclassic.fragmenterworks.com/wiki/index.php/Main_Page>http://ffxivclassic.fragmenterworks.com/wiki/index.php/Main_Page</a>
+<p>Project Meteor : <a class=gdoc-markdown__link href=http://ffxivclassic.fragmenterworks.com/wiki/index.php/Main_Page>http://ffxivclassic.fragmenterworks.com/wiki/index.php/Main_Page</a> <br>
 Seventh Umbral Launhcer : <a class=gdoc-markdown__link href=http://seventhumbral.org/downloads.php>http://seventhumbral.org/downloads.php</a></p>
 </article>
 <div class="gdoc-page__footer flex flex-wrap justify-between">
